# mira-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUBMISSION.md  app_structure_llm.txt  pyproject.toml
.agents/code-reviews/: full-main-technical-review.md  phase-2-report-audit-ui-review.md  phase-3-media-plan-review.md
.agents/execution-reports/: phase-3-media-plan-implementation.md
docs/: demo-script.md  responsible-ai.md
evidence/: README.md  authorization-smoke-5e95e74-20260612.summary.json  azure-smoke-20260611-194437.audit.json  azure-smoke-20260611-194437.md  azure-smoke-20260611-194437.summary.json  azure-smoke-baseline-5e95e74-20260612-191050.audit.json  azure-smoke-baseline-5e95e74-20260612-191050.md  azure-smoke-baseline-5e95e74-20260612-191050.summary.json  azure-smoke-growth-5e95e74-20260612-192459.audit.json  azure-smoke-growth-5e95e74-20260612-192459.md  azure-smoke-growth-5e95e74-20260612-192459.summary.json  azure-smoke-whitelist-20260611-200931.audit.json  azure-smoke-whitelist-20260611-200931.md  azure-smoke-whitelist-20260611-200931.summary.json  azure-stress-100k-20260611-200621.audit.json  azure-stress-100k-20260611-200621.md  azure-stress-100k-20260611-200621.summary.json  benchmark-growth-5e95e74-20260612.json
ops/azure/: README.md
samples/: README.md  crm-demo.csv  ga4-demo.csv
scripts/: __init__.py  create_demo_users.py  remote_smoke_test.py
skills/: media-plan-strategy.md  media-plan-synthesis.md
supabase/: config.toml
ui/: index.html  package-lock.json  package.json
(+88 files in other folders)
