[project]
name = "mira-agent"
version = "0.1.0"
description = "MIRA marketing intelligence agent app spine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "exa-py>=2.13.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langgraph>=1.2.2",
    "pydantic>=2.7.0",
    "pydantic-ai>=1.105.0",
    "pydantic-settings>=2.2.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mira_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires local Supabase and demo users",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
